Added the rest of the functionality with typescript support

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.5",
+    "@uidotdev/usehooks": "^2.4.1",
+    "axios": "^1.7.9",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "playwright": "^1.50.1",
